--- a/public/css/app.css
+++ b/public/css/app.css
@@ -585,47 +585,123 @@ video {
   }
 }
 
-.test__class {
+.admin__input {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+  border-radius: 0.375rem;
+  border-width: 1px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1.25rem;
+}
+
+.admin__input:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.admin__input {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.admin__input:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(59, 130, 246, var(--tw-ring-opacity));
+}
+
+.admin__input {
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .test__class {
-    max-width: 640px;
-  }
+.admin__select {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+  border-radius: 0.375rem;
+  border-width: 1px;
+  cursor: pointer;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1.25rem;
 }
 
-@media (min-width: 768px) {
-  .test__class {
-    max-width: 768px;
-  }
+.admin__select:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
-@media (min-width: 1024px) {
-  .test__class {
-    max-width: 1024px;
-  }
+.admin__select {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-@media (min-width: 1280px) {
-  .test__class {
-    max-width: 1280px;
-  }
+.admin__select:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(59, 130, 246, var(--tw-ring-opacity));
 }
 
-@media (min-width: 1536px) {
-  .test__class {
-    max-width: 1536px;
-  }
+.admin__select {
+  width: 100%;
 }
 
-.test__class {
+.admin__label {
+  cursor: pointer;
+  display: block;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+
+.admin__button__submit {
+  --tw-bg-opacity: 1;
+  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
+
+.admin__button__submit:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+
+.admin__button__submit:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+
+.admin__button__submit {
+  border-radius: 0.375rem;
+  display: block;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5rem;
-  max-width: 1280px;
-  padding-left: 1rem;
-  padding-right: 1rem;
+}
+
+.admin__button__submit:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.admin__button__submit {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
