--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,16 @@
 @tailwind utilities;
 
 @layer components {
-    .test__class {
-        @apply container max-w-screen-xl mx-auto px-4 mt-20;
+    .admin__input {
+        @apply border border-gray-500 rounded-md px-3 py-1.5 text-sm w-full focus:outline-none focus:ring-1 focus:ring-blue-500 mb-5 mt-2;
+    }
+    .admin__select {
+        @apply border border-gray-500 rounded-md px-2 py-2 text-sm w-full focus:outline-none focus:ring-1 focus:ring-blue-500 cursor-pointer mb-5 mt-2;
+    }
+    .admin__label {
+        @apply font-semibold text-sm text-gray-700 block cursor-pointer;
+    }
+    .admin__button__submit {
+        @apply block mx-auto bg-blue-500 hover:bg-blue-600 focus:bg-blue-600 focus:outline-none text-white px-10 py-2 rounded-md text-sm;
     }
 }
