--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,3 +23,9 @@
         @apply bg-blue-500 hover:bg-blue-600 focus:bg-blue-600 focus:outline-none text-white w-full py-2.5 rounded-md text-sm font-semibold;
     }
 }
+
+@layer utilities {
+    i {
+        @apply  pointer-events-none;
+    }
+}
